# wireless_charging_scheme_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  config.h  main.cpp  plotting.py  result_plotting.ipynb  simluation.cpp  simluation.h
GraphComponents/: CMakeLists.txt  Graph.cpp  Graph.h  LineFormula.cpp  LineFormula.h  charger.cpp  charger.h  coordinate.cpp  coordinate.h  coordinates.cpp  coordinates.h  edge.cpp  edge.h  graph.cpp  graph.h  point.cpp  point.h  vertex.cpp  vertex.h
Metrics/: CMakeLists.txt  Metrics_test.cpp  Metrics_test.h  base_evaluator.cpp  base_evaluator.h  chance_evaluator.cpp  chance_evaluator.h  energy_evaluator.cpp  energy_evaluator.h  power_evaluator.cpp  power_evaluator.h
Solutions/: CMakeLists.txt  base_solution.cpp  base_solution.h  greedy_heuristic_solution.cpp  greedy_heuristic_solution.h  pso_based_solution.cpp  pso_based_solution.h  utils.cpp  utils.h
