cmake_minimum_required(VERSION 3.16)
set(PROJECT_NAME wireless_charging_scheme_simulator)
project(${PROJECT_NAME} VERSION 0.0.0)

set(CMAKE_CXX_STANDARD 20)
add_subdirectory(Metrics)
include_directories(Metrics)
add_subdirectory(GraphComponents)
include_directories(GraphComponents)
add_subdirectory(Solutions)
include_directories(Solutions)
include_directories(.)
aux_source_directory(. MAIN_SRC)
add_executable(wireless_charging_scheme_simulator ${MAIN_SRC} )
target_link_libraries(${PROJECT_NAME} PUBLIC Metrics)
target_link_libraries(${PROJECT_NAME} PUBLIC GraphComponents)
target_link_libraries(${PROJECT_NAME} PUBLIC Solutions)
